Fixed status section horizontal and vertical alignment

--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,8 @@ body {
 #status-section {
     display: flex;
     flex-flow:row wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 #selection-section {
